--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "music-player-frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "prettier --write \"./src/**/*.{js,ts,jsx,tsx,json,md,css,sass}\"",
     "start": "react-scripts start",
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/faztdevelopers/music-player-frontend/issues"
   },
-  "homepage": "https://github.com/faztdevelopers/music-player-frontend#readme",
+  "homepage": "",
   "eslintConfig": {
     "extends": "react-app"
   },
