--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     {
       "name": "Pablo Verduzco",
       "email": "pabloverduzcos@gmail.com"
+    },
+    {
+      "name": "zd4y"
     }
   ],
   "license": "UNLISENCED",
@@ -38,6 +41,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1"
