Add react router and layout components

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "music-player-frontend",
   "description": "",
   "main": "src/index.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,6 +45,7 @@
     "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
