--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1",
-    "react-router-dom": "^5.1.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "^2.0.4"
