add component search

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
       "email": "pabloverduzcos@gmail.com"
     },
     {
+      "name": "Fernando López",
+      "email": "fer.ragnar19@gmail.com",
+      "url": "https://github.com/Beor18"
+    },
+    {
       "name": "zd4y"
     }
   ],
