Artistas scroll horizontal - Screenshots in readme

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     },
     {
       "name": "zd4y"
+    },
+    {
+      "name": "Freud Alexandro Múnera",
+      "email": "alexandromunera@gmail.com",
+      "url": "https://www.linkedin.com/in/freud-alexandro/"
     }
   ],
   "license": "UNLISENCED",
