Grid albums just 2 rows - changed desing scroll

--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-slick": "^0.25.2",
+    "simplebar-react": "^2.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
