Refactor/components containers (#29)
* theming

* style

* add mock albums

* add mock data

* Alias imports

* clear unnecessary imports

* Squashed commit of the following:

commit f9360064a7dbdd4f14d67ed7ce384bf7070c6c31
Merge: 666773a 95a4881
Author: Fernando Lopez <fer.ragnar19@gmail.com>
Date:   Tue Jun 23 14:51:31 2020 -0300

    Merge pull request #27 from faztdevelopers/usernav-component

    Usernav component

commit 95a48812c144a9448e4028f490fe42f0673faee7
Author: zd4y <ariasorozco03@gmail.com>
Date:   Mon Jun 22 16:49:18 2020 -0500

    fix overflow in login page

commit fbfe773858040c8ecc7c735c768df748f053d340
Author: zd4y <ariasorozco03@gmail.com>
Date:   Mon Jun 22 16:35:13 2020 -0500

    fix typo

commit 45e2546698c3d66c285ce2386ccad2ca89cf4c01
Author: zd4y <ariasorozco03@gmail.com>
Date:   Mon Jun 22 16:31:52 2020 -0500

    Create PrivateRoute component again and run linter

commit c848d36b08ee08ad6738748d49f1375176999309
Author: zd4y <ariasorozco03@gmail.com>
Date:   Mon Jun 22 16:04:20 2020 -0500

    add useUser() to some components and move imports

commit 62bab68847a3c7c36d82f44f11a943bca1425a78
Author: zd4y <ariasorozco03@gmail.com>
Date:   Mon Jun 22 15:52:28 2020 -0500

    Create UserNav component

* Change imports in UserNav and PrivateRoute

* fix merge

* change imports

* Change imports

* add again position in login

* run linter

Co-authored-by: Fernando Lopez <lopezfer@globalhitss.com>
Co-authored-by: zd4y <ariasorozco03@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "prettier --write \"./src/**/*.{js,ts,jsx,tsx,json,md,css,scss}\""
+    "lint": "prettier --write \"./src/**/*.{js,ts,jsx,tsx,json,md,css,scss}\"",
+    "postinstall": "link-module-alias"
+  },
+  "_moduleAliases": {
+    "@components": "src/components",
+    "@containers": "src/containers",
+    "@hooks": "src/hooks",
+    "@Mocks": "src/Mocks",
+    "@requests": "src/requests",
+    "@context": "src/context",
+    "@icons": "src/assets/icons",
+    "@images": "src/assets/img"
   },
   "repository": {
     "type": "git",
@@ -53,6 +64,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "link-module-alias": "^1.2.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
